# gna

./: .gitignore  .gitmodules  CMakeLists.txt  readme.txt
doc/: GNA.uml
doc/ddi-doxygen/: Doxyfile  build_ddi_doxygen.sh  ddi_header.tex
doc/gna-api-doxygen/: Doxyfile  build_publish.bat
doc/tlv-doxygen/: Doxyfile  build_tlv_doxygen.sh  tlv_header.tex
samples/: CMakeLists.txt  Readme-Linux.txt  Readme-Windows.txt  gna-samples.sln  readme.txt
samples/GnaId/: GnaId.cpp  GnaId.vcxproj
samples/sample01/: sample01.cpp  sample01.vcxproj  sample01.vcxproj.filters
samples/sample_dumper/: sample_dumper.cpp  sample_dumper.vcxproj  sample_dumper.vcxproj.filters
samples/src/sample01/: CMakeLists.txt  sample01.cpp
solutions/: gna-drv.sln  gna-lib.sln
src/common/: Address.h  GmmDrvApi.h  GnaDrvApi.h  GnaDrvApiWin.h  GnaDrvApiWinDebug.h  GnaDrvGuids.h  GnaException.h  Macros.h  common.h  gna-api-dev.h  gna-api-dumper.h  gna-api-extra.h  gna-api-instrumentation.h  gna-api-status.h  gna-api-types-gmm.h  gna-api-types-xnn.h  gna-api-verbose.h  gna-api.h  gna-h-wrapper.h  gna.h  profiler.c  profiler.cpp  profiler.h  resource.h  version.rc
src/cpkg/: libarch-cpkg-lib.lib
src/gna-api/: GNA_ArchCPkg.h  GNA_ArchCPkg_ExtPerf.h  gna2-api.h  gna2-capability-api.h  (+15 more)
src/gna-lib/: AccelerationDetector.cpp  AccelerationDetector.h  Accelerator.cpp  Accelerator.h  AcceleratorCnl.cpp  AcceleratorCnl.h  AcceleratorController.cpp  AcceleratorController.h  AcceleratorHw.cpp  AcceleratorHw.h  AcceleratorHwVerbose.cpp  AcceleratorHwVerbose.h  AcceleratorSw.cpp  AcceleratorSw.h  ActivationFunction.cpp  ActivationFunction.h  ActivationHelper.cpp  ActivationHelper.h  ActiveList.cpp  ActiveList.h  Address.h  AffineFunctions.cpp  AffineFunctions.h  AffineLayerCapabilities.cpp  AffineLayerCapabilities.h  AffineLayers.cpp  AffineLayers.h  ApiProperty.cpp  ApiProperty.h  ApiTypedefs.h  ApiWrapper.h  AuxiliaryCapabilities.cpp  AuxiliaryCapabilities.h  Bias.cpp  Bias.h  BufferMap.cpp  BufferMap.h  CMakeLists.txt  Capabilities.cpp  Capabilities.h  (+176 more)
src/gna-lib/gna-api/: gna2-capability-impl.cpp  gna2-capability-impl.h  gna2-common-impl.cpp  gna2-common-impl.h  gna2-device-impl.cpp  gna2-device-impl.h  gna2-impl.h  gna2-inference-impl.cpp  gna2-inference-impl.h  gna2-instrumentation-impl.cpp  gna2-instrumentation-impl.h  gna2-memory-impl.cpp  gna2-memory-impl.h  gna2-model-export-impl.cpp  gna2-model-export-impl.h  gna2-model-impl.cpp  gna2-model-impl.h  gna2-validation-impl.cpp  gna2-validation-impl.h
src/gna-lib/kernels/: CMakeLists.txt  ConvolutionKernelArguments.h  KernelArguments.cpp  KernelArguments.h  KernelMacros.h  PoolingKernelArguments.cpp  PoolingKernelArguments.h  XnnKernel.cpp  XnnKernel.h  XnnKernelApi.h  affine16_avx2-sat.cpp  affine8_avx2-sat.cpp  affine_avx2-sat.cpp  affine_sse4-sat.cpp  common.hpp  common_avx2.hpp  common_sse4.hpp  convnet.cpp  convnet.h  convnet_avx1-sat.cpp  convnet_avx1.cpp  convnet_avx2-sat.cpp  convnet_avx2.cpp  convnet_generic-sat.cpp  convnet_generic.cpp  convnet_sse4-sat.cpp  convnet_sse4.cpp  gmm.c  gmm.cpp  gmm.h  igemm16_avx1-sat.cpp  igemm16_avx1.cpp  igemm16_avx2-sat.cpp  igemm16_avx2.cpp  igemm16_generic-sat.cpp  igemm16_generic.cpp  igemm16_sse4-sat.cpp  igemm16_sse4.cpp  igemm16_subset_avx1-sat.cpp  igemm16_subset_avx1.cpp  (+58 more)
src/gtest/: CMakeLists.txt
src/gtest/test-class/: CMakeLists.txt  test-hw-module-interface.cpp  test-hw-module-interface.hpp
src/gtest/test-gna-api/: CMakeLists.txt  test-activation-helper.cpp  test-activation-helper.h  test-gna-api-verbose.cpp  test-gna-api.cpp  test-gna-api.h  test-gna-device-api.cpp  test-gna-device-api.h  test-gna-multithread.cpp  test-gna-multithread.h  test-microphone-selection-model.cpp  test-model-export-legacy-sue.cpp  test-model-export-legacy-sue.h  test-model-export-tlv.cpp  test-tlv-reader-in-c-lang.c
src/gtest/test-layer/: CMakeLists.txt  test-affine-layer.cpp  test-affine-layer.h  test-diagonal-layer.cpp  test-diagonal-layer.h  test-internal.cpp  test-layer.cpp  test-layer.h  test-recurrent-layer.cpp  test-recurrent-layer.h  test-transpose-layer.cpp  test-transpose-layer.h
src/gtest/test-model-error/: CMakeLists.txt  test-main.cpp  test-model-error.cpp  test-model-error.hpp
src/gtest/test-tlv/: CMakeLists.txt  test-tlv-read.cpp  test-tlv-write.cpp  test-tlv-write.h
src/gtest/test-xnn/: CMakeLists.txt  test-xnn.cpp
src/tools/: CMakeLists.txt
src/tools/DevTest/: CMakeLists.txt  ChainModel.cpp  ChainModel.h  DevTest.cpp  DeviceController.cpp  DeviceController.h  IModelSetup.cpp  IModelSetup.h  ModelSetup.cpp  ModelSetup.h  ModelSetupFactory.cpp  ModelSetupFactory.h  ModelUtilities.cpp  ModelUtilities.h  Script.cpp  Script.h  SetupConvolutionModel.cpp  SetupConvolutionModel.h  SetupConvolutionModel2D.cpp  SetupConvolutionModel2D.h  SetupCopyModel.cpp  SetupCopyModel.h  SetupDiagonalModel.cpp  SetupDiagonalModel.h  SetupDnnModel_1.cpp  SetupDnnModel_1.h  SetupDnnModel_Multibuffer.cpp  SetupDnnModel_Multibuffer.h  SetupGmmModel.cpp  SetupGmmModel.h  SetupMixModel.cpp  SetupMixModel.h  SetupModelBasic_1.cpp  SetupModelBasic_1.h  SetupMultibiasModel_1.cpp  SetupMultibiasModel_1.h  SetupPoolingModel.cpp  SetupPoolingModel.h  SetupRecurrentModel.cpp  SetupRecurrentModel.h  (+4 more)
src/tools/common/: Gna2OperationHolder.hpp  Gna2Utilities.hpp
src/tools/gna-driver-util/: CMakeLists.txt  DriverInterface.h  GnaUtilConfig.cpp  GnaUtilConfig.h  LinuxDriverInterface.cpp  LinuxDriverInterface.h  Memory.h  WindowsDriverInterface.cpp  WindowsDriverInterface.h  gna-driver-util.cpp
src/tools/gna-self-test/: CMakeLists.txt  HardwareSelfTest.cpp  HardwareSelfTest.h  LinuxHardwareSelfTest.cpp  LinuxHardwareSelfTest.h  LinuxNoPciLibBasedImpl.cpp  LinuxPciLibBasedImpl.cpp  MultiOsHardwareSelfTest.h  PciDeviceInfo.cpp  PciDeviceInfo.h  SampleModelForGnaSelfTest.cpp  SampleModelForGnaSelfTest.h  SelfTest.cpp  SelfTest.h  WindowsHardwareSelfTest.cpp  WindowsHardwareSelfTest.h  gna-self-test.cpp
src/tools/tlv/: CMakeLists.txt  TlvApi.h  TlvCommon.h  TlvErrors.c  TlvErrors.h  TlvRead.c  TlvRead.h  TlvWrite.c  TlvWrite.h
(+75 files in other folders)
